@@ -1,5 +1,7 @@
 Cacti CHANGELOG
 
+-bug: Cacti does not guarentee RRA consolidation functions exist in RRA's.
+
 0.8.7a
 -bug#0000895: "Use Per-Data Source Value (Ignore this Value)" runs only when when checking "Allow Empty Input"
 -bug#0001029: Add --autoscale-min (rrdtool 1.2.x only) and --autoscale-max (using upper AND lower limit)
